# ice-cream-dataops

./: .env  .gitignore  README.md  config.test.yaml  pyproject.toml
.github/workflows/: .gitignore  prod.yaml  test.yaml
ice-cream-dataops/: build_info.test.yaml
ice-cream-dataops/function_local_venvs/oee_timeseries/: run_check.py
ice-cream-dataops/modules/: config.prod.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: schedules.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/raw/: ice_cream_api.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: icapi_ts_assets_contextualization.schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml
modules/bootcamp/data_foundation/auth/: data_developer.yaml
modules/bootcamp/ice_cream_api/transformations/: create_asset_hierarchy.schedule.yaml  create_asset_hierarchy.yaml  icapi_ts_assets_contextualization.yaml
modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkFlowTrigger.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
