[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Anil-cognite <anilkumar.bandanadam@cognite.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cognite-toolkit = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
